[package]
name = "stroke2vibe"
version = "0.1.0"
edition = "2021"
authors = ["soundchaser128 <soundchaser128@gmail.com>"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.10.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"